proget/templates/pg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: pg
  name: pg
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      io.kompose.service: pg
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/proget-network: "true"
        io.kompose.service: pg
    spec:
      containers:
        - env:
            - name: SA_PASSWORD
              value: "1Passw0rd"
            - name: SQL_CONNECTION_STRING
              value: Data Source=proget-sql; Initial Catalog=ProGet; User ID=sa; Password=${SA_PASSWORD}
          image: proget.inedo.com/productimages/inedo/progetcore:5.3.11
          name: proget
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /var/proget/packages
              name: pg-claim0
      restartPolicy: Always
      volumes:
        - name: pg-claim0
          persistentVolumeClaim:
            claimName: pg-claim0
status: {}
