proget/templates/proget-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: proget-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/proget-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/proget-network: "true"
